Some layout improvements

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body ng-app="uiKitchenSink">
     <header></header>
-    <content ng-view></content>
+    <content ng-view data-autoscroll="false"></content>
     <footer></footer>
 
     <!-- JS includes automatically generated with grunt, do not enter sources by hand-->
