Search Implementation started

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <!-- CSS includes automatically generated with grunt, do not enter sources by hand-->
     <!-- bower:css -->
     <link rel="stylesheet" href="libs/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="libs/select2/select2.css" />
+    <link rel="stylesheet" href="libs/select2-bootstrap-css/select2-bootstrap.css" />
     <!-- endbower -->
     <link href="/app/css/custom-style.css" rel="stylesheet" type="text/css">
 
@@ -26,11 +28,13 @@
     <script src="libs/bootstrap/dist/js/bootstrap.js"></script>
     <script src="libs/angular/angular.js"></script>
     <script src="libs/angular-route/angular-route.js"></script>
+    <script src="libs/select2/select2.js"></script>
     <!-- endbower -->
     <script src="/app/js/app.js"></script>
     <script src="/app/js/appRoutes.js"></script>
     <script src="/app/js/controllers/contentController.js"></script>
     <script src="/app/js/controllers/headerController.js"></script>
+    <script src="/app/js/controllers/searchController.js"></script>
     <script src="/app/js/directives/breadcrumb/breadcrumbContentDirective.js"></script>
     <script src="/app/js/directives/contentDirective.js"></script>
     <script src="/app/js/directives/dropdown/dropdownCategoriesDirective.js"></script>
@@ -39,6 +43,7 @@
     <script src="/app/js/directives/entry/entryContentDirective.js"></script>
     <script src="/app/js/directives/footerDirective.js"></script>
     <script src="/app/js/directives/headerDirective.js"></script>
+    <script src="/app/js/directives/search/searchDirective.js"></script>
     <script src="/app/js/directives/tab/tabsCategoriesDirective.js"></script>
     <script src="/app/js/directives/tab/tabsContentDirective.js"></script>
     <script src="/app/js/directives/title/titleContentDirective.js"></script>
