--- a/app/index.html
+++ b/app/index.html
@@ -15,10 +15,13 @@
 
 </head>
 <body ng-app="uiKitchenSink">
+
     <header></header>
+    <div id="wrapper">
+        <sidebar></sidebar>
     <content ng-view data-autoscroll="false"></content>
     <footer></footer>
-
+    </div>
     <!-- JS includes automatically generated with grunt, do not enter sources by hand-->
     <!-- bower:js -->
     <!-- endbower -->
