--- a/app/src/content/sidebars/sidebars.tpl.html
+++ b/app/src/content/sidebars/sidebars.tpl.html
@@ -1,34 +1,159 @@
-<span>
-  <div class="il-column-sortable" ng-if="position=='left'">
-      <explorer>
-      </explorer>
+<div>
+  <div ng-if="position=='left'">
+      <div class="il-column-sortable"  ng-if="!$parent.$parent.isLeftSidebarOpen()">
+          <div>
+              <button type="button" class="btn btn-default btn-lg il-sidebar-preview-button il-panel-sortable">
+                  <div class="glyphicon glyphicon-search" aria-hidden="true"></div><div class="il-sidebar-preview-button-text">Search</div>
+              </button>
+          </div>
+          <div class="il-panel-sortable">
+
+              <button type="button" class="btn btn-default btn-lg il-sidebar-preview-button il-panel-sortable">
+                  <span class="glyphicon glyphicon-list" aria-hidden="true"></span><div class="il-sidebar-preview-button-text">Navigation</div>
+              </button>
+          </div>
+          <div class="il-panel-sortable">
+              <button type="button" class="btn btn-default btn-lg il-sidebar-preview-button il-panel-sortable">
+                  <span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span><div class="il-sidebar-preview-button-text">Help</div>
+              </button>
+          </div>
+          <div class="il-panel-sortable">
+              <button type="button" class="btn btn-default btn-lg il-sidebar-preview-button il-panel-sortable">
+                  <span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span><div class="il-sidebar-preview-button-text">Help</div>
+              </button>
+          </div>
+          <div class="il-panel-sortable">
+              <button type="button" class="btn btn-default btn-lg il-sidebar-preview-button il-panel-sortable">
+                  <span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span><div class="il-sidebar-preview-button-text">Help</div>
+              </button>
+          </div>
+          <div class="il-panel-sortable">
+              <button type="button" class="btn btn-default btn-lg il-sidebar-preview-button il-panel-sortable">
+                  <span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span><div class="il-sidebar-preview-button-text">Help</div>
+              </button>
+          </div>
+          <div class="il-panel-sortable">
+              <button type="button" class="btn btn-default btn-lg il-sidebar-preview-button il-panel-sortable">
+                  <span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span><div class="il-sidebar-preview-button-text">Help</div>
+              </button>
+          </div>
+          <div class="il-panel-sortable">
+              <button type="button" class="btn btn-default btn-lg il-sidebar-preview-button il-panel-sortable">
+                  <span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span><div class="il-sidebar-preview-button-text">Help</div>
+              </button>
+          </div>
+          <div class="il-panel-sortable">
+              <button type="button" class="btn btn-default btn-lg il-sidebar-preview-button il-panel-sortable">
+                  <span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span><div class="il-sidebar-preview-button-text">Help</div>
+              </button>
+          </div>
+          <div class="il-panel-sortable">
+              <button type="button" class="btn btn-default btn-lg il-sidebar-preview-button il-panel-sortable">
+                  <span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span><div class="il-sidebar-preview-button-text">Help</div>
+              </button>
+          </div>
+          <div class="il-panel-sortable">
+              <button type="button" class="btn btn-default btn-lg il-sidebar-preview-button il-panel-sortable">
+                  <span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span><div class="il-sidebar-preview-button-text">Help</div>
+              </button>
+          </div>
+          <div class="il-panel-sortable">
+              <button type="button" class="btn btn-default btn-lg il-sidebar-preview-button il-panel-sortable">
+                  <span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span><div class="il-sidebar-preview-button-text">Help</div>
+              </button>
+          </div>
+          <div class="il-panel-sortable">
+              <button type="button" class="btn btn-default btn-lg il-sidebar-preview-button il-panel-sortable">
+                  <span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span><div class="il-sidebar-preview-button-text">Help</div>
+              </button>
+          </div>
+          <div class="il-panel-sortable">
+              <button type="button" class="btn btn-default btn-lg il-sidebar-preview-button il-panel-sortable">
+                  <span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span><div class="il-sidebar-preview-button-text">Help</div>
+              </button>
+          </div>
+          <div class="il-panel-sortable">
+              <button type="button" class="btn btn-default btn-lg il-sidebar-preview-button il-panel-sortable">
+                  <span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span><div class="il-sidebar-preview-button-text">Help</div>
+              </button>
+          </div>
+          <div class="il-panel-sortable">
+              <button type="button" class="btn btn-default btn-lg il-sidebar-preview-button il-panel-sortable">
+                  <span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span><div class="il-sidebar-preview-button-text">Help</div>
+              </button>
+          </div>
+          <div class="il-panel-sortable">
+              <button type="button" class="btn btn-default btn-lg il-sidebar-preview-button il-panel-sortable">
+                  <span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span><div class="il-sidebar-preview-button-text">Help</div>
+              </button>
+          </div>
+          <div class="il-panel-sortable">
+              <button type="button" class="btn btn-default btn-lg il-sidebar-preview-button il-panel-sortable">
+                  <span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span><div class="il-sidebar-preview-button-text">Help</div>
+              </button>
+          </div>
+          <div class="il-panel-sortable">
+              <button type="button" class="btn btn-default btn-lg il-sidebar-preview-button il-panel-sortable">
+                  <span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span><div class="il-sidebar-preview-button-text">Help</div>
+              </button>
+          </div>
+          <div class="il-panel-sortable">
+              <button type="button" class="btn btn-default btn-lg il-sidebar-preview-button il-panel-sortable">
+                  <span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span><div class="il-sidebar-preview-button-text">Help</div>
+              </button>
+          </div>
+          <div class="il-panel-sortable">
+              <button type="button" class="btn btn-default btn-lg il-sidebar-preview-button il-panel-sortable">
+                  <span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span><div class="il-sidebar-preview-button-text">Help</div>
+              </button>
+          </div>
+          <div class="il-panel-sortable">
+              <button type="button" class="btn btn-default btn-lg il-sidebar-preview-button il-panel-sortable">
+                  <span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span><div class="il-sidebar-preview-button-text">Help</div>
+              </button>
+          </div>
+          <div class="il-panel-sortable">
+              <button type="button" class="btn btn-default btn-lg il-sidebar-preview-button il-panel-sortable">
+                  <span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span><div class="il-sidebar-preview-button-text">Help</div>
+              </button>
+          </div>
+          <div class="il-panel-sortable">
+              <button type="button" class="btn btn-default btn-lg il-sidebar-preview-button il-panel-sortable">
+                  <span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span><div class="il-sidebar-preview-button-text">Help</div>
+              </button>
+          </div>
+          <div class="il-panel-sortable">
+              <button type="button" class="btn btn-default btn-lg il-sidebar-preview-button il-panel-sortable">
+                  <span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span><div class="il-sidebar-preview-button-text">Help</div>
+              </button>
+          </div>
+      </div>
+      <span ng-if="$parent.$parent.isLeftSidebarOpen()">
+            Content
+      </span>
   </div>
-  <span ng-if="position=='right'">
-        <div class="il-column-sortable" >
-            <div class="panel panel-default il-panel-sortable">
-                <div class="panel-heading il-panel-sortable-heading">
-                    <h3 class="panel-title">Panel 2</h3>
-                </div>
-                <div class="panel-body il-panel-sortable-content">
-                    Panel content
-                </div>
-            </div>
-            <div class="panel panel-default il-panel-sortable">
-                <div class="panel-heading il-panel-sortable-heading">
-                    <h3 class="panel-title">Panel 3</h3>
-                </div>
-                <div class="panel-body il-panel-sortable-content">
-                    Panel content
-                </div>
-            </div>
-            <div class="panel panel-default il-panel-sortable">
-                <div class="panel-heading il-panel-sortable-heading">
-                    <h3 class="panel-title">Panel 4</h3>
-                </div>
-                <div class="panel-body il-panel-sortable-content">
-                    Panel content
-                </div>
-            </div>
-        </div>
-  </span>
-</span>
+  <div ng-if="position=='right'">
+      <div class="il-column-sortable"  ng-if="!$parent.$parent.isRightSidebarOpen()">
+          <div class="clearfix">
+              <button type="button" class="btn btn-default btn-lg il-sidebar-preview-button">
+                  <div class="glyphicon glyphicon-bullhorn" aria-hidden="true"></div><div class="il-sidebar-preview-button-text il-panel-sortable ">Messages</div>
+              </button>
+          </div>
+          <div class="clearfix">
+              <button type="button" class="btn btn-default btn-lg il-sidebar-preview-button">
+                  <span class="glyphicon glyphicon-comment" aria-hidden="true"></span><div class="il-sidebar-preview-button-text il-panel-sortable ">Comments</div>
+              </button>
+          </div>
+          <div class="clearfix">
+              <button type="button" class="btn btn-default btn-lg il-sidebar-preview-button">
+                  <span class="glyphicon glyphicon-pushpin" aria-hidden="true"></span><div class="il-sidebar-preview-button-text il-panel-sortable ">Notes</div>
+              </button>
+          </div>
+          <div class="clearfix">
+              <button type="button" class="btn btn-default btn-lg il-sidebar-preview-button">
+                  <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span><div class="il-sidebar-preview-button-text il-panel-sortable ">Calendar</div>
+              </button>
+          </div>
+      </div>
+  </div>
+</div>
