--- a/app/src/header/topNav/topNavContent.tpl.html
+++ b/app/src/header/topNav/topNavContent.tpl.html
@@ -1,4 +1,4 @@
-<nav class="il-main-header navbar navbar-default navbar-fixed-top">
+<nav class="il-top-nav navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -10,7 +10,7 @@
             </button>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav" ng-transclude>
 
             </ul>
