--- a/app/src/header/topNav/topNavCategories.tpl.html
+++ b/app/src/header/topNav/topNavCategories.tpl.html
@@ -1,5 +1,5 @@
 <li class='dropdown {{active}}'>
-    <a href='' class='dropdown-toggle {{brandClass}}' data-toggle='dropdown'>{{title}}<b class='caret'></b></a>
+    <a href='' class='dropdown-toggle' data-toggle='dropdown'>{{title}}<b class='caret'></b></a>
     <ul id="{{title}}_list" class='dropdown-menu' ng-transclude></ul>
 </li>
 
