--- a/app/src/header/topBar/topBar.tpl.html
+++ b/app/src/header/topBar/topBar.tpl.html
@@ -7,18 +7,19 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="il-navbar-logo" href="#/index.html">
+            <a class="il-navbar-logo" href="#/content/0/0">
                 <object type="image/svg+xml" data="/app/static/img/HeaderIcon.svg"></object>
             </a>
-            <a class="navbar-brand" href="#/index.html">UI-Kitchen-Sink
+            <a class="navbar-brand" href="#/content/0/0">UI-Kitchen-Sink
             </a>
         </div>
-        <div id="navbar" class="navbar-collapse collapse">
+        <div id="il-top-nav-entries" class="navbar-collapse collapse">
+            <ul class="nav navbar-nav" ng-transclude>
+
+            </ul>
             <form class="navbar-form navbar-right" ng-controller="SearchController" >
-                <span ng-transclude>
-                </span>
-                <a type="submit" href="/libs/live-less-theme-customizer/dist/customizer.html" class="btn btn-info">Customize</a>
+                <a type="submit" href="/libs/live-less-theme-customizer/dist/customizer.html" class="btn btn-primary">Customize</a>
             </form>
-        </div><!--/.navbar-collapse -->
+        </div>
     </div>
 </nav>
